# SIMD-Avx_testing

./: CMakeLists.txt  kcenterscpp.cpp
c/lib/: CMakeLists.txt  kCentersOutliers.c  kCentersOutliers.h
c/test/: CMakeLists.txt  main.c
cpp/: CMakeLists.txt
cpp/test/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  kCentersOutliers.cpp  kCentersOutliers.hpp
test/: main.cpp
